<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <PreferenceCategory
        android:title = "表示全般の設定">

    <CheckBoxPreference
        android:key="@string/pref_list_bar_visible"
        android:summary="用件が０件でもリストバーを表示する"
        android:title="リストバーを常に表示"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title = "単発予定リスト">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_past_task_visible"
            android:summary="予定日を過ぎても表示する"
            android:title="過去の用件の表示"/>

        <ListPreference
            android:defaultValue="90"
            android:key="@string/pref_future_task_visible"
            android:summary="%s"
            android:title="未来の用件の表示"
            android:entries="@array/entries_future_task"
            android:entryValues="@array/entries_val_future_task"
            android:dialogTitle="タイトル" />



    </PreferenceCategory>

</PreferenceScreen>

