<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mtd_title"
        android:textSize="24sp"
        android:background="@color/task_not_yet"
        android:text="タイトル"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mtd_exp"
        android:textSize="20sp"
        android:text="サブ"
    />

    <!--タスク名を入力する用-->
    <EditText
        android:id="@+id/mtd_edit_task"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />

    <!--メモを入力する用-->
    <EditText
        android:id="@+id/mtd_edit_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="10"
        android:inputType="textMultiLine"/>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_delete"
            android:id="@+id/mtd_delete"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mtd_cancel"
            android:text="@string/bt_return"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mtd_ok"
            android:text="@string/bt_ok"/>


    </LinearLayout>


</LinearLayout>


<!--

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"/>
-->
