<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/task_not_yet"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/exp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/exp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/con_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/border"
        android:text="単発予定"
        android:textSize="24sp"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
    >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_cell_title"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/task_name"
            android:layout_weight="1" android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/border"
            android:layout_marginRight="40dp"
        />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/menu_1"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="開始日："
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/con_1"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="２０１６年１１月６日（金）"
            android:background="@drawable/border"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/menu_2"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="実行頻度："
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/con_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="２日に１回"
            android:textSize="20sp"
            android:background="@drawable/border"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/menu_3"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="目標回数："
            android:textSize="20sp"
        />
        <TextView
            android:id="@+id/con_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="２日に１回"
            android:textSize="20sp"
            android:background="@drawable/border"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/menu_4"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="メモ："
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/con_4"
            android:layout_weight="1" android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/border"
            android:layout_marginRight="40dp"
            android:maxLines="6"
        />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" android:orientation="horizontal"
        android:layout_marginTop="16dp"
    >

        <Button
            android:id="@+id/entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/bt_entry"/>


        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/bt_update"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/bt_return"/>


    </LinearLayout>

</LinearLayout>

    <!--
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:layout_marginTop="16dp">

<TextView
    android:id="@+id/menu_0"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:text="予定種別："
    android:textSize="20sp"
/>
<TextView
    android:id="@+id/con_0"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="単発予定"
    android:textSize="20sp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@drawable/border"
/>
</LinearLayout>
-->
